# Corset

./: .gitignore  BUGFIX.md  CHANGELOG.md  Cluster.cc  Cluster.h  FlatDistMap.h  LeidenCluster.cc  LeidenCluster.h  MakeClusters.cc  MakeClusters.h  Makefile.in  Progress.h  README  Read.cc  Read.h  StringSet.h  Transcript.cc  Transcript.h  configure  configure.in  corset.cc  corset_fasta_ID_changer.cc  test_bmed.sh  test_bmed_l5.sh
.github/workflows/: build.yml
containers/: Corset.def
