#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([corset], [1.10.0], [<nadia.davidson@mcri.edu.au>])

CXXFLAGS="-O3 -ffast-math -fopenmp -I./ $CXXFLAGS $CPPFLAGS"

AC_PROG_CXX()
AC_LANG(C++)
AC_PROG_MAKE_SET

# ---------- htslib discovery ----------
AC_ARG_WITH(htslib, [  --with-htslib=DIR
                  specify the prefix where htslib is installed (expects DIR/include/htslib/sam.h and DIR/lib/libhts)])

if test "$with_htslib" != "" && test "$with_htslib" != "yes"
then
    CPPFLAGS="-I$with_htslib/include $CPPFLAGS"
    CXXFLAGS="-I$with_htslib/include $CXXFLAGS"
    LDFLAGS="-L$with_htslib/lib $LDFLAGS"
    LD_RUN_PATH="$with_htslib/lib:$LD_RUN_PATH"
fi

# Check for htslib header
AC_CHECK_HEADERS([htslib/sam.h], [], [
  echo "" &&
  echo "ERROR: Could not find htslib headers (htslib/sam.h)." &&
  echo "       Please install htslib or specify its location with:" &&
  echo "       './configure --with-htslib=<htslib prefix>'" &&
  exit -1
])

# Check for required libraries (order matters: hts depends on z, lzma, bz2, etc.)
AC_CHECK_LIB([z], [main], [], [
  echo "ERROR: Could not find zlib (-lz)." && exit -1
])

AC_CHECK_LIB([lzma], [main], [], [])
AC_CHECK_LIB([curl], [main], [], [])
AC_CHECK_LIB([bz2], [main], [], [])
AC_CHECK_LIB([deflate], [main], [], [])
AC_CHECK_LIB([pthread], [main], [], [])

AC_CHECK_LIB([hts], [hts_open], [], [
  echo "" &&
  echo "ERROR: Could not find htslib (-lhts)." &&
  echo "       Please install htslib or specify its location with:" &&
  echo "       './configure --with-htslib=<htslib prefix>'" &&
  exit -1
])

AC_CONFIG_FILES([Makefile])

my_save_cflags="$CXXFLAGS"
CXXFLAGS=-std=c++23
AC_MSG_CHECKING([whether compiler supports -std=c++23])
AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],[
	my_save_cflags="$my_save_cflags -std=c++23"],
	[AC_MSG_RESULT([no])]
)
CXXFLAGS="$my_save_cflags"

AC_SUBST(LD_RUN_PATH,$LD_RUN_PATH)

AC_OUTPUT
